
- MPR#7704, GPR#1564: use proper variant tag in non-exhaustiveness warning
  (Jacques Garrigue, report by Thomas Refis)

- MPR#7712, GPR#1576: assertion failure with type abbreviations
  (Thomas Refis, report by Michael O'Connor, review by Jacques Garrigue)

- MPR#7747: Type checker can loop infinitly and consumes all computer memory
  (Jacques Garrigue, report by kantian)

- GPR#1530, GPR#1574: testsuite, fix 'make parallel' and 'make one DIR=...'
  to work on ocamltest-based tests.
  (Runhang Li and Sébastien Hinderer, review by Gabriel Scherer)

- GPR#1614: consider all bound variables when inlining, fixing a compiler
  fatal error.
  (Xavier Clerc, review by Pierre Chambart, Leo White)

- GPR#1622: fix bug in the expansion of command-line arguments under Windows
  which could result in some elements of Sys.argv being truncated in some cases.
  (Nicolás Ojeda Bär, review by Sébastien Hinderer)

- GPR#1661: more precise principality warning regarding record fields
  disambiguation
  (Thomas Refis, review by Leo White)

4.06 maintenance branch
-----------------------

### Bug fixes

- MPR#7661, GPR#1459: fix faulty compilation of patterns
  using extensible variants constructors
  (Luc Maranget, review by Thomas Refis and Gabriel Scherer, report
  by Abdelraouf Ouadjaout and Thibault Suzanne)

- MPR#7702, GPR#1553: refresh raise counts when inlining a function
  (Vincent Laviron, Xavier Clerc, report by Cheng Sun)

- MPR#7704, GPR#1559: Soundness issue with private rows and pattern-matching
  (Jacques Garrigue, report by Jeremy Yallop, review by Thomas Refis)

- MPR#7705, GPR#1558: add missing bounds check in Bigarray.Genarray.nth_dim.
  (Nicolás Ojeda Bär, report by Jeremy Yallop, review by Gabriel Scherer)

- MPR#7713, GPR#1587: Make pattern matching warnings more robust
  to ill-typed columns; this is a backport of GPR#1550 from 4.07+dev
  (Thomas Refis, review by Gabriel Scherer, report by Andreas Hauptmann)
