@@ -1,4 +1,5 @@
 exotic_lists.ml
 pr7060.ml
+pr7751.ml
 strings.ml
 tracing.ml
